My Portfolio Updated

--- a/index.html
+++ b/index.html
@@ -1,11 +1,118 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700&amp;display=swap" rel="stylesheet">
+    <title>My Personal Portfolio</title>
 </head>
+
 <body>
-    
+
+
+    <header id="navbar">
+        <nav>
+            <ul>
+                <li><a href="#welcome-section">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <section id="welcome-section" class="welcome-section">
+        <h1>Hey I'm Erickson</h1>
+        <p> Future web developer</p>
+    </section>
+
+
+
+    <section id="projects" class="projects-section">
+        <h2 class="projects-section-header">These are my projects</h2>
+
+        <div class="projects-grid">
+            <a href="Projects/tributePage.html" target="_blank" class="project project-tile">
+                <img class="project-image" src="https://img.bleacherreport.net/img/images/photos/002/712/251/60789193_crop_north.jpg?1390084083&w=3072&h=2048"
+                    alt="project">
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    Tribute Page
+                    <span class="code">/&gt;</span>
+                </p>
+            </a>
+            <a href="Projects/surveyForm.html" target="_blank" class="project project-tile">
+                <img class="project-image"
+                    src="https://cdn1.vectorstock.com/i/1000x1000/06/60/feedback-survey-form-on-clipboard-with-hands-vector-23030660.jpg"
+                    alt="project">
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    Survey Form
+                    <span class="code">/&gt;</span>
+                </p>
+            </a>
+            <a href="Projects/productL.html" target="_blank" class="project project-tile">
+                <img class="project-image" src="https://cms-assets.tutsplus.com/cdn-cgi/image/width=850/uploads/users/2778/posts/32174/image-upload/proland_landing_page_product.jpg"
+                    alt="project">
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    Product landing Page
+                    <span class="code">/&gt;</span>
+                </p>
+            </a>
+            <a href="Projects/portfolio.html" target="_blank" class="project project-tile">
+                <img class="project-image" src="https://qph.cf2.quoracdn.net/main-qimg-fea4a84c9413514132fe053769bce875"
+                    alt="project">
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    Portfolio
+                    <span class="code">/&gt;</span>
+                </p>
+            </a>
+            <a href="Projects/technicalDocs.html" target="_blank" class="project project-tile">
+                <img class="project-image" src="https://blog.hubspot.com/hs-fs/hubfs/technical%20documentation_7.webp?width=598&height=363&name=technical%20documentation_7.webp"
+                    alt="project">
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    Technical Documentaion
+                    <span class="code">/&gt;</span>
+                </p>
+            </a>
+            <a href="https://github.com/elbalgos/BALGOS-CIT14-2H/tree/master/CSS-Activities" target="_blank" class="project project-tile">
+                <img class="project-image"
+                    src="https://storage.googleapis.com/noknow_blog/it/20221005/1664948066647931342_css3.svg">
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    CSS Exercise
+                    <span class="code">/&gt;</span>
+                </p>
+            </a>
+        </div>
+
+        <a href="https://github.com/elbalgos/BALGOS-CIT14-2H.git" class="btn btn-show-all" target="_blank">Show all<i
+                class="fas fa-chevron-right"></i></a>
+    </section>
+
+
+
+    <section id="contact" class="contact-section">
+        <div class="contact-section-header">
+            <h2>Let's Collab together</h2>
+
+        </div>
+        <div class="contact-links">
+            <a href="https://www.facebook.com/erickson.balgos.2416?mibextid=LQQJ4d" target="_blank"
+                class="btn contact-details"><i class="fab fa-facebook-square"></i> Facebook</a>
+            <a id="profile-link" href="https://github.com/elbalgos/BALGOS-CIT14-2H.git" target="_blank"
+                class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
+            <a href="https://instagram.com/sonbalgos?igshid=YzAwZjE1ZTI0Zg%3D%3D&utm_source=qr" target="_blank"
+                class="btn contact-details"><i class="fab fa-instagram"></i> instagram</a>
+
+        </div>
+    </section>
+
 </body>
 </html>
